// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secondary Button Component should match snapshot 1`] = `
<a
  className="sec_btn p_add"
  href="#"
  onClick={[MockFunction]}
>
  Add post
</a>
`;

exports[`Secondary Button Component should match snapshot with label prop as a function 1`] = `
<a
  className="sec_btn sec_btn_disabled"
  href="#"
  onClick={[MockFunction]}
>
  <img
    src="/images/spacecraft.jpg"
  />
</a>
`;
